--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -3,3 +3,15 @@
     flex-direction: column;
     align-items: center;
 }
+
+.homeHeader{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.home a{
+    text-decoration: none;
+    color: black;
+}
